maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: ':' expected but ')' found.
def isDirectionFree(dir) = {
                       ^Escaper:31: error: identifier expected but '}' found.
}
^